# ai-driven-pmic-meas-plugin

./: .gitignore  CLAUDE.md  LICENSE  README.md  requirements.txt
.claude/agents/: spec-reviewer.md
.claude/commands/: gen-measui.md  implement.md  new-plugin.md  refine-measui.md  scaffold.md  spec.md  test-cases.md
.claude/skills/find-meas-example/: SKILL.md  find_example.sh
.claude/skills/measui-gotchas/: SKILL.md
.claude/skills/measui-reference/: SKILL.md
.claude/skills/measurement-plugin-sdk/: SKILL.md
.claude/skills/nidcpower-patterns/: SKILL.md
.devcontainer/: devcontainer.json  post_create.sh
docs/: development-guide.md  measui-authoring-guide-unverified.md  measui-gotchas.md  measui-reference.md  measui-rules-unverified.md  test-design.md  update-measui.md
docs/specs/: pmic_efficiency.md  pmic_efficiency_test_cases.md  pmic_efficiency_ui.md
scripts/: validate_measui.py
src/examples/meas-plugin/game_of_life/: game_of_life.serviceconfig:Zone.Identifier
src/examples/nidcpower/: nidcpower_advanced_sequence.py  nidcpower_constant_resistance_and_constant_power.py  nidcpower_lcr_source_ac_voltage.py  nidcpower_measure_record.py  nidcpower_sink_dc_current_into_electronic_load.py  nidcpower_source_delay_measure.py
src/pmic_efficiency/: PMICEfficiency.measproj  PMICEfficiency.measui  PMICEfficiency.pinmap  PMICEfficiency.serviceconfig  install.bat  measurement.py  pyproject.toml
tests/: conftest.py  test_calculations.py  test_measurement.py  test_smoke.py
tests/pmic_efficiency/: conftest.py  test_calculations.py  test_smoke.py
(+16 files in other folders)
