[tool.poetry]
name = "pmic_efficiency"
version = "0.1.0"
package-mode = false
description = "PMIC efficiency test measurement plug-in using NI-DCPower."
authors = []

[tool.poetry.dependencies]
python = "^3.10"
nidcpower = { version = ">=1.4.4", extras = ["grpc"] }
ni-measurement-plugin-sdk-service = { version = ">=2.3.1,<4.0" }
click = ">=7.1.2, !=8.1.4"
grpcio = "*"
numpy = ">=1.24"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "hightime.*",
    "nidcpower.*",
]
ignore_missing_imports = true
